--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Cairo', sans-serif; color: #333; background: #f0f8ff; overflow-x: hidden; }
         
-        /* Hero with Luxury Underwater Background */
+        /* Hero */
         #hero {
             height: 100vh;
             background: linear-gradient(rgba(0, 80, 150, 0.6), rgba(0, 80, 150, 0.6)), url('https://media.cntravellerme.com/photos/659e6c6e1c08bc2985f9c5ef/4:3/w_5248,h_3936,c_limit/CONRAD%20MALDIVES%20RANGALI%20ISLAND_F&B_Ithaa%20Undersea%20Restaurant_Hero_credit%20Justin%20Nicholas_hi-res%20(3).jpg') center/cover no-repeat fixed;
@@ -23,22 +23,22 @@
             color: white;
             position: relative;
         }
-        #hero h1 { font-family: 'Amiri', serif; font-size: 6em; text-shadow: 0 4px 15px rgba(0,0,0,0.6); animation: fadeInDown 1.5s ease; }
-        #hero p { font-size: 2.2em; margin: 25px 0; animation: fadeInDown 1.5s 0.5s ease both; }
+        #hero h1 { font-family: 'Amiri', serif; font-size: 5rem; text-shadow: 0 4px 15px rgba(0,0,0,0.6); animation: fadeInDown 1.5s ease; }
+        #hero p { font-size: 1.8rem; margin: 20px 0; animation: fadeInDown 1.5s 0.5s ease both; }
         #hero button { 
-            padding: 22px 70px; 
+            padding: 18px 60px; 
             background: linear-gradient(to right, #ffd700, #ffec80); 
             border: none; 
             color: #005f99; 
-            font-size: 1.8em; 
+            font-size: 1.6rem; 
             font-weight: bold;
             cursor: pointer; 
             border-radius: 50px; 
             box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            transition: all 0.4s ease;
         }
         #hero button:hover { 
-            transform: scale(1.15) translateY(-5px); 
+            transform: scale(1.1) translateY(-5px); 
             box-shadow: 0 20px 40px rgba(0,0,0,0.5); 
         }
 
@@ -46,179 +46,146 @@
 
         /* Professional Header */
         header {
-            position: fixed; top: 0; width: 100%; background: linear-gradient(to bottom, rgba(0, 95, 153, 0.98), rgba(0, 95, 153, 0.9)); padding: 25px 50px; display: flex; justify-content: space-between; align-items: center; z-index: 1000; transition: padding 0.5s, box-shadow 0.5s; backdrop-filter: blur(15px); border-bottom: 1px solid rgba(255,255,255,0.2);
+            position: fixed; top: 0; width: 100%; background: rgba(0, 95, 153, 0.95); padding: 18px 40px; display: flex; justify-content: space-between; align-items: center; z-index: 1000; transition: all 0.4s ease; backdrop-filter: blur(15px); box-shadow: 0 4px 20px rgba(0,0,0,0.2);
         }
-        header.scrolled { padding: 15px 50px; box-shadow: 0 8px 25px rgba(0,0,0,0.4); }
-        .logo { display: flex; align-items: center; color: white; font-family: 'Amiri', serif; font-size: 3em; transition: transform 0.3s; }
+        header.scrolled { padding: 12px 40px; background: rgba(0, 80, 130, 0.98); box-shadow: 0 8px 30px rgba(0,0,0,0.3); }
+        .logo { display: flex; align-items: center; color: white; font-family: 'Amiri', serif; font-size: 2.4rem; transition: transform 0.3s; }
         .logo:hover { transform: scale(1.05); }
-        .logo img { width: 90px; margin-left: 20px; border-radius: 50%; box-shadow: 0 5px 15px rgba(0,0,0,0.3); transition: transform 0.3s; }
+        .logo img { width: 70px; margin-left: 15px; border-radius: 50%; box-shadow: 0 5px 15px rgba(0,0,0,0.3); transition: transform 0.4s; }
         .logo img:hover { transform: rotate(360deg); }
         .header-right { display: flex; align-items: center; gap: 40px; }
-        nav ul { display: flex; list-style: none; gap: 40px; }
-        nav ul li a { color: white; text-decoration: none; font-size: 1.5em; position: relative; transition: color 0.3s, transform 0.3s; }
-        nav ul li a::after { content: ''; position: absolute; bottom: -8px; left: 0; width: 0; height: 4px; background: #ffd700; transition: width 0.3s; border-radius: 2px; }
+        nav ul { display: flex; list-style: none; gap: 35px; }
+        nav ul li a { color: white; text-decoration: none; font-size: 1.3rem; position: relative; transition: all 0.3s; }
+        nav ul li a::after { content: ''; position: absolute; bottom: -8px; left: 50%; width: 0; height: 3px; background: #ffd700; transition: all 0.4s; transform: translateX(-50%); }
         nav ul li a:hover { color: #ffd700; transform: translateY(-3px); }
         nav ul li a:hover::after { width: 100%; }
-        .header-info { display: flex; align-items: center; gap: 30px; font-size: 1.2em; color: white; }
-        .header-info i { margin-left: 8px; color: #ffd700; }
-        .header-info a { color: white; text-decoration: none; transition: color 0.3s; }
+        .header-info { display: flex; align-items: center; gap: 25px; font-size: 1.1rem; }
+        .header-info span, .header-info a { color: white; display: flex; align-items: center; gap: 8px; transition: color 0.3s; }
+        .header-info i { color: #ffd700; }
         .header-info a:hover { color: #ffd700; }
 
         /* Sections */
-        section { padding: 140px 10%; }
-        h2 { font-size: 4.5em; text-align: center; margin-bottom: 90px; color: #005f99; font-family: 'Amiri', serif; }
+        section { padding: 100px 5%; }
+        h2 { font-size: 3.5rem; text-align: center; margin-bottom: 70px; color: #005f99; font-family: 'Amiri', serif; position: relative; }
+        h2::after { content: ''; display: block; width: 120px; height: 4px; background: #ffd700; margin: 15px auto 0; border-radius: 2px; }
 
         /* Menu Grid */
         .menu-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
-            gap: 60px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 40px;
         }
         .menu-item {
             background: white;
-            border-radius: 30px;
+            border-radius: 25px;
             overflow: hidden;
-            box-shadow: 0 20px 50px rgba(0,0,0,0.2);
-            transition: transform 0.6s, box-shadow 0.6s, border 0.6s;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+            transition: all 0.5s ease;
             cursor: pointer;
             border: 2px solid transparent;
         }
-        .menu-item:hover { transform: translateY(-30px) rotate(1deg); box-shadow: 0 30px 60px rgba(0,0,0,0.3); border: 2px solid #ffd700; }
-        .menu-item img { width: 100%; height: 350px; object-fit: cover; transition: transform 0.6s, filter 0.6s; }
-        .menu-item:hover img { transform: scale(1.2); filter: brightness(1.1); }
-        .menu-info { padding: 35px; text-align: center; transition: background 0.3s; }
-        .menu-item:hover .menu-info { background: rgba(255, 215, 0, 0.1); }
-        .menu-info h3 { font-size: 2.2em; margin-bottom: 20px; }
-        .menu-info p { font-size: 1.3em; color: #666; }
+        .menu-item:hover { transform: translateY(-20px); box-shadow: 0 30px 60px rgba(0,0,0,0.25); border-color: #ffd700; }
+        .menu-item img { width: 100%; height: 280px; object-fit: cover; transition: all 0.5s; }
+        .menu-item:hover img { transform: scale(1.15); filter: brightness(1.1); }
+        .menu-info { padding: 25px; text-align: center; }
+        .menu-info h3 { font-size: 1.8rem; margin-bottom: 10px; color: #005f99; }
+        .menu-info p { font-size: 1.2rem; color: #666; }
 
-        /* Modals Base */
+        /* Modals */
         .item-modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.85); justify-content: center; align-items: center; z-index: 2000; opacity: 0; transition: opacity 0.5s; }
         .item-modal.show { opacity: 1; }
-
-        /* Reservation Modal - Professional & Larger */
-        #reservation-modal .item-modal-content {
+        #reservation-modal .item-modal-content,
+        #item-modal .item-modal-content {
             background: white;
-            padding: 60px 80px;
-            border-radius: 30px;
+            padding: 50px 60px;
+            border-radius: 25px;
             width: 90%;
-            max-width: 700px; /* كبرناها بشكل ملحوظ */
+            max-width: 600px;
             text-align: center;
             box-shadow: 0 30px 80px rgba(0,0,0,0.5);
             transform: scale(0.9);
             transition: transform 0.5s;
             position: relative;
         }
-        #reservation-modal.show .item-modal-content { transform: scale(1); }
-
-        #reservation-modal h3 {
-            font-size: 3em;
-            color: #005f99;
-            margin-bottom: 40px;
-            font-family: 'Amiri', serif;
+        .item-modal.show .item-modal-content { transform: scale(1); }
+        #reservation-modal h3 { font-size: 2.5rem; color: #005f99; margin-bottom: 30px; font-family: 'Amiri', serif; }
+        #reservation-modal input, #reservation-modal select, #reservation-modal textarea {
+            width: 100%; padding: 15px 18px; margin: 12px 0; border: 2px solid #ddd; border-radius: 12px; font-size: 1.1rem; transition: all 0.3s;
         }
-
-        #reservation-modal input,
-        #reservation-modal select,
-        #reservation-modal textarea {
-            width: 100%;
-            padding: 18px 20px;
-            margin: 15px 0;
-            border: 2px solid #ddd;
-            border-radius: 15px;
-            font-size: 1.2em;
-            transition: border-color 0.3s, box-shadow 0.3s;
+        #reservation-modal input:focus, #reservation-modal select:focus, #reservation-modal textarea:focus {
+            border-color: #005f99; box-shadow: 0 0 15px rgba(0,95,153,0.2); outline: none;
         }
-
-        #reservation-modal input:focus,
-        #reservation-modal select:focus,
-        #reservation-modal textarea:focus {
-            border-color: #005f99;
-            box-shadow: 0 0 15px rgba(0, 95, 153, 0.2);
-            outline: none;
-        }
-
-        #reservation-modal textarea {
-            resize: vertical;
-            min-height: 120px;
-        }
-
+        #reservation-modal textarea { min-height: 110px; resize: vertical; }
         #reservation-modal button {
-            padding: 20px 60px;
-            background: linear-gradient(to right, #005f99, #007bff);
-            color: white;
-            border: none;
-            border-radius: 50px;
-            font-size: 1.5em;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 30px;
-            transition: transform 0.3s, box-shadow 0.3s;
+            padding: 18px 60px; background: linear-gradient(to right, #005f99, #007bff); color: white; border: none; border-radius: 50px; font-size: 1.4rem; font-weight: bold; cursor: pointer; margin-top: 25px; transition: all 0.4s;
         }
-
-        #reservation-modal button:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 15px 30px rgba(0, 123, 255, 0.4);
-        }
-
-        /* Item Details Modal (keep same style) */
-        #item-modal .item-modal-content {
-            background: white;
-            padding: 60px;
-            border-radius: 30px;
-            width: 90%;
-            max-width: 700px;
-            text-align: center;
-            box-shadow: 0 25px 50px rgba(0,0,0,0.4);
-            transform: scale(0.9);
-            transition: transform 0.5s;
-            position: relative;
-        }
-        #item-modal.show .item-modal-content { transform: scale(1); }
-        #item-modal .item-modal-content img { width: 100%; height: 350px; object-fit: cover; border-radius: 20px; margin-bottom: 30px; }
-        #item-modal h3 { font-size: 2.8em; margin-bottom: 20px; }
-        #item-modal p { font-size: 1.6em; margin-bottom: 20px; }
-        #item-modal .details { font-size: 1.3em; color: #666; line-height: 1.8; }
-
-        .close-item { position: absolute; top: 20px; left: 30px; font-size: 3em; cursor: pointer; color: #999; transition: color 0.3s; }
+        #reservation-modal button:hover { transform: translateY(-5px); box-shadow: 0 15px 30px rgba(0,123,255,0.4); }
+        .close-item { position: absolute; top: 20px; left: 25px; font-size: 2.8rem; color: #aaa; cursor: pointer; transition: color 0.3s; }
         .close-item:hover { color: #005f99; }
 
         /* Contact */
-        #contact p { text-align: center; font-size: 2em; max-width: 1000px; margin: 0 auto 60px; }
+        #contact p { text-align: center; font-size: 1.6rem; max-width: 900px; margin: 0 auto 50px; line-height: 1.8; }
 
-        /* Professional Footer */
+        /* Footer */
         footer {
-            background: linear-gradient(to top, #004d80, #005f99, #007bff); color: white; padding: 80px 50px 40px; font-size: 1.4em; position: relative; overflow: hidden;
+            background: linear-gradient(to top, #004d80, #005f99, #007bff); color: white; padding: 80px 40px 40px; font-size: 1.2rem; position: relative; overflow: hidden;
         }
         footer::before { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('https://www.transparenttextures.com/patterns/wavecut.png'); opacity: 0.15; }
         .footer-top { display: flex; justify-content: space-between; flex-wrap: wrap; gap: 40px; margin-bottom: 60px; }
-        .footer-column { flex: 1; min-width: 250px; }
-        .footer-column h3 { font-size: 1.8em; margin-bottom: 20px; color: #ffd700; }
+        .footer-column { flex: 1; min-width: 220px; }
+        .footer-column h3 { font-size: 1.6rem; margin-bottom: 20px; color: #ffd700; }
         .footer-column ul { list-style: none; }
-        .footer-column ul li { margin-bottom: 15px; }
-        .footer-column ul li a { color: white; text-decoration: none; transition: color 0.3s, padding-right 0.3s; }
+        .footer-column ul li { margin-bottom: 12px; }
+        .footer-column ul li a { color: white; text-decoration: none; transition: all 0.3s; display: flex; align-items: center; gap: 10px; }
         .footer-column ul li a:hover { color: #ffd700; padding-right: 10px; }
         .social-icons { display: flex; gap: 20px; margin-top: 20px; }
-        .social-icons a { font-size: 2em; color: white; transition: transform 0.3s, color 0.3s; }
-        .social-icons a:hover { transform: translateY(-5px); color: #ffd700; }
-        .footer-bottom { text-align: center; padding-top: 30px; border-top: 1px solid rgba(255,255,255,0.2); }
+        .social-icons a { font-size: 1.8rem; color: white; width: 50px; height: 50px; background: rgba(255,255,255,0.1); border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: all 0.4s; }
+        .social-icons a:hover { background: #ffd700; color: #005f99; transform: translateY(-8px); }
+        .footer-bottom { text-align: center; padding-top: 30px; border-top: 1px solid rgba(255,255,255,0.2); font-size: 1rem; }
         .footer-bottom a { color: #ffd700; margin: 0 15px; text-decoration: none; transition: color 0.3s; }
         .footer-bottom a:hover { color: white; }
 
-        /* Responsive */
+        /* Responsive Adjustments - مقاسات طبيعية ومتوازنة */
+        @media (max-width: 1024px) {
+            #hero h1 { font-size: 4.5rem; }
+            #hero p { font-size: 1.6rem; }
+            #hero button { padding: 16px 50px; font-size: 1.5rem; }
+            header { padding: 16px 30px; }
+            .logo { font-size: 2.2rem; }
+            nav ul { gap: 25px; }
+            nav ul li a { font-size: 1.2rem; }
+            .header-info { gap: 20px; font-size: 1rem; }
+        }
         @media (max-width: 768px) {
-            #hero h1 { font-size: 4em; }
-            #hero p { font-size: 1.5em; }
-            #hero button { padding: 18px 50px; font-size: 1.5em; }
-            header { padding: 15px 20px; flex-direction: column; gap: 15px; }
-            .header-right { flex-wrap: wrap; justify-content: center; gap: 15px; }
-            .header-info { font-size: 1em; gap: 15px; flex-wrap: wrap; justify-content: center; }
+            #hero h1 { font-size: 3.5rem; }
+            #hero p { font-size: 1.4rem; }
+            #hero button { padding: 14px 40px; font-size: 1.3rem; }
+            header { padding: 12px 20px; flex-direction: column; gap: 15px; }
+            .header-right { flex-direction: column; gap: 15px; text-align: center; }
+            .header-info { flex-wrap: wrap; justify-content: center; gap: 15px; font-size: 0.95rem; }
             section { padding: 80px 5%; }
-            h2 { font-size: 3em; }
-            .menu-grid { grid-template-columns: 1fr; }
-            .footer-top { flex-direction: column; }
+            h2 { font-size: 2.8rem; }
+            .menu-grid { gap: 30px; }
+            .menu-item img { height: 220px; }
+            .menu-info { padding: 20px; }
+            .menu-info h3 { font-size: 1.6rem; }
+            .menu-info p { font-size: 1.1rem; }
             #reservation-modal .item-modal-content,
             #item-modal .item-modal-content { padding: 40px 30px; max-width: 95%; }
-            #reservation-modal h3 { font-size: 2.5em; }
+            #reservation-modal h3 { font-size: 2.2rem; }
+            footer { padding: 60px 20px 30px; }
+            .footer-top { gap: 30px; }
+        }
+        @media (max-width: 480px) {
+            #hero h1 { font-size: 3rem; }
+            #hero p { font-size: 1.2rem; }
+            #hero button { padding: 12px 35px; font-size: 1.2rem; }
+            .logo { font-size: 2rem; }
+            .logo img { width: 60px; }
+            nav ul { gap: 15px; flex-wrap: wrap; justify-content: center; }
+            nav ul li a { font-size: 1.1rem; }
+            h2 { font-size: 2.5rem; }
+            .menu-info h3 { font-size: 1.5rem; }
         }
     </style>
 </head>
