--- a/index.html
+++ b/index.html
@@ -64,6 +64,39 @@
         .header-info i { color: #ffd700; }
         .header-info a:hover { color: #ffd700; }
 
+        /* Hamburger Menu for Mobile */
+        .hamburger {
+            display: none;
+            font-size: 2rem;
+            color: white;
+            cursor: pointer;
+            z-index: 1001;
+        }
+        .mobile-menu {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 80%;
+            max-width: 350px;
+            height: 100vh;
+            background: rgba(0, 80, 130, 0.98);
+            padding: 100px 30px 30px;
+            transition: right 0.4s ease;
+            z-index: 1000;
+            box-shadow: -10px 0 30px rgba(0,0,0,0.4);
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            backdrop-filter: blur(10px);
+        }
+        .mobile-menu.open { right: 0; }
+        .mobile-menu nav ul { flex-direction: column; gap: 30px; width: 100%; text-align: center; }
+        .mobile-menu nav ul li a { font-size: 1.6rem; color: white; }
+        .mobile-menu nav ul li a:hover { color: #ffd700; }
+        .mobile-menu .header-info { flex-direction: column; gap: 20px; margin-top: 40px; font-size: 1.3rem; width: 100%; text-align: center; }
+        .mobile-menu .header-info span, .mobile-menu .header-info a { color: white; justify-content: center; }
+
         /* Sections */
         section { padding: 100px 5%; }
         h2 { font-size: 3.5rem; text-align: center; margin-bottom: 70px; color: #005f99; font-family: 'Amiri', serif; position: relative; }
@@ -120,6 +153,22 @@
             padding: 18px 60px; background: linear-gradient(to right, #005f99, #007bff); color: white; border: none; border-radius: 50px; font-size: 1.4rem; font-weight: bold; cursor: pointer; margin-top: 25px; transition: all 0.4s;
         }
         #reservation-modal button:hover { transform: translateY(-5px); box-shadow: 0 15px 30px rgba(0,123,255,0.4); }
+
+        /* Item Details Modal - الصورة مظبوطة تمامًا */
+        #item-modal .item-modal-content img { 
+            width: 100%; 
+            max-height: 400px; 
+            height: auto; 
+            object-fit: contain; 
+            border-radius: 20px; 
+            margin-bottom: 30px; 
+            background: #f8f8f8;
+            padding: 10px;
+        }
+        #item-modal h3 { font-size: 2.4rem; margin-bottom: 15px; color: #005f99; }
+        #item-modal p { font-size: 1.5rem; margin-bottom: 20px; }
+        #item-modal .details { font-size: 1.2rem; color: #666; line-height: 1.8; padding: 0 20px; }
+
         .close-item { position: absolute; top: 20px; left: 25px; font-size: 2.8rem; color: #aaa; cursor: pointer; transition: color 0.3s; }
         .close-item:hover { color: #005f99; }
 
@@ -145,80 +194,45 @@
         .footer-bottom a { color: #ffd700; margin: 0 15px; text-decoration: none; transition: color 0.3s; }
         .footer-bottom a:hover { color: white; }
 
-        /* Mobile-Specific Adjustments - خصوصًا للهيدر */
+        /* Responsive - مع همبرجر منيو */
+        @media (max-width: 992px) {
+            .header-right { gap: 30px; }
+            nav ul { gap: 25px; }
+            nav ul li a { font-size: 1.2rem; }
+        }
         @media (max-width: 768px) {
-            #hero h1 { font-size: 3.2rem; }
-            #hero p { font-size: 1.3rem; }
+            #hero h1 { font-size: 3.5rem; }
+            #hero p { font-size: 1.4rem; }
             #hero button { padding: 14px 40px; font-size: 1.3rem; }
 
-            header {
-                padding: 12px 15px;
-                flex-direction: column;
-                gap: 12px;
-                align-items: flex-start;
-            }
-            header.scrolled { padding: 10px 15px; }
+            header { padding: 15px 20px; justify-content: space-between; }
+            .header-right { display: none; }
+
+            .hamburger { display: block; }
 
             .logo { font-size: 2rem; }
-            .logo img { width: 55px; margin-left: 10px; }
+            .logo img { width: 60px; }
 
-            .header-right {
-                width: 100%;
-                flex-direction: column;
-                gap: 15px;
-                align-items: center;
-            }
-
-            nav ul {
-                flex-direction: column;
-                gap: 12px;
-                width: 100%;
-                text-align: center;
-            }
-            nav ul li a { font-size: 1.2rem; }
-
-            .header-info {
-                flex-direction: column;
-                gap: 10px;
-                font-size: 0.95rem;
-                width: 100%;
-                text-align: center;
-            }
-            .header-info span, .header-info a { justify-content: center; }
-
-            section { padding: 70px 5%; }
-            h2 { font-size: 2.6rem; }
-            h2::after { width: 100px; }
+            section { padding: 80px 5%; }
+            h2 { font-size: 2.8rem; }
 
             .menu-grid { gap: 30px; }
-            .menu-item img { height: 220px; }
-            .menu-info { padding: 18px; }
-            .menu-info h3 { font-size: 1.5rem; }
-            .menu-info p { font-size: 1.1rem; }
+            .menu-item img { height: 240px; }
+            .menu-info h3 { font-size: 1.6rem; }
 
-            #reservation-modal .item-modal-content,
-            #item-modal .item-modal-content { padding: 35px 25px; max-width: 95%; }
-            #reservation-modal h3 { font-size: 2rem; }
+            #item-modal .item-modal-content img { max-height: 300px; }
 
             footer { padding: 60px 20px 30px; }
-            .footer-top { gap: 35px; }
-            .footer-column { text-align: center; }
-            .social-icons { justify-content: center; }
         }
-
         @media (max-width: 480px) {
-            #hero h1 { font-size: 2.8rem; }
-            #hero p { font-size: 1.1rem; }
+            #hero h1 { font-size: 3rem; }
+            #hero p { font-size: 1.2rem; }
             #hero button { padding: 12px 35px; font-size: 1.2rem; }
 
             .logo { font-size: 1.8rem; }
             .logo img { width: 50px; }
 
-            nav ul li a { font-size: 1.1rem; }
-            .header-info { font-size: 0.9rem; }
-
-            h2 { font-size: 2.3rem; }
-            .menu-info h3 { font-size: 1.4rem; }
+            h2 { font-size: 2.5rem; }
         }
     </style>
 </head>
@@ -228,6 +242,9 @@
         <div class="logo">
             <img src="s2.jpg" alt="سمكيتو">
             سمكيتو
+        </div>
+        <div class="hamburger" onclick="toggleMobileMenu()">
+            <i class="fas fa-bars"></i>
         </div>
         <div class="header-right">
             <nav>
@@ -245,6 +262,23 @@
             </div>
         </div>
     </header>
+
+    <!-- Mobile Menu -->
+    <div class="mobile-menu" id="mobile-menu">
+        <nav>
+            <ul>
+                <li><a href="#hero" onclick="toggleMobileMenu()">الرئيسية</a></li>
+                <li><a href="#menu" onclick="toggleMobileMenu()">القائمة</a></li>
+                <li><a href="#contact" onclick="toggleMobileMenu()">تواصل</a></li>
+            </ul>
+        </nav>
+        <div class="header-info">
+            <span><i class="fas fa-phone"></i> 01234567890</span>
+            <span><i class="fas fa-clock"></i> يوميًا 12م - 12ص</span>
+            <a href="mailto:info@smakito.com"><i class="fas fa-envelope"></i> info@smakito.com</a>
+            <a href="#" onclick="openReservationModal(); toggleMobileMenu(); return false;"><i class="fas fa-calendar-alt"></i> احجز الآن</a>
+        </div>
+    </div>
 
     <section id="hero" data-aos="fade-down">
         <h1>سمكيتو</h1>
@@ -390,12 +424,19 @@
             document.getElementById('header').classList.toggle('scrolled', window.scrollY > 50);
         });
 
+        function toggleMobileMenu() {
+            document.getElementById('mobile-menu').classList.toggle('open');
+            const icon = document.querySelector('.hamburger i');
+            icon.classList.toggle('fa-bars');
+            icon.classList.toggle('fa-times');
+        }
+
         document.querySelectorAll('a[href^="#"]').forEach(a => {
             a.addEventListener('click', e => {
-                if (!a.getAttribute('onclick')) {
-                    e.preventDefault();
-                    document.querySelector(a.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
-                }
+                if (a.getAttribute('onclick') && a.getAttribute('onclick').includes('toggleMobileMenu')) return;
+                e.preventDefault();
+                document.querySelector(a.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+                if (window.innerWidth <= 768) toggleMobileMenu();
             });
         });
 
@@ -403,6 +444,7 @@
             const modal = document.getElementById('reservation-modal');
             modal.style.display = 'flex';
             setTimeout(() => modal.classList.add('show'), 10);
+            if (window.innerWidth <= 768) toggleMobileMenu();
         }
 
         function closeReservationModal() {
