--- a/index.html
+++ b/index.html
@@ -395,12 +395,11 @@
         <div class="item-modal-content">
             <span class="close-item" onclick="closeReservationModal()">&times;</span>
             <h3>احجز طاولتك</h3>
-            <input type="text" placeholder="الاسم الكريم">
+            <input type="text" placeholder="الاسم">
             <input type="tel" placeholder="رقم الهاتف">
             <input type="date">
             <input type="time">
             <select><option>عدد الأشخاص</option><option>1-2</option><option>3-4</option><option>5-8</option><option>8+</option></select>
-            <textarea placeholder="ملاحظات إضافية (اختياري)" rows="4"></textarea>
             <button>تأكيد الحجز</button>
         </div>
     </div>
